--- a/student_system/src/main/resources/application.properties
+++ b/student_system/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.jsp.init-parameters.development=true
 
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/student_system?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=000000
